# openapi.yaml
@@ -1,45 +1,45 @@
 openapi: 3.0.1
 info:
-  title: TODO Plugin
-  description: A plugin that allows the user to create and manage a TODO list using ChatGPT. If you do not know the user's username, ask them first before making queries to the plugin. Otherwise, use the username "global".
-  version: 'v1'
+  title: MyAnimeList Plugin
+  description: Plugin for interacting with MyAnimeList; retrieve info about specific anime/manga, access general or seasonal rankings, read forum topics, get or update info about an authenticated user, and more.
+  version: "v1"
 servers:
-  - url: http://localhost:5003
+  - url: https://chatgpt-mal-plugin.herokuapp.com
 paths:
   /todos/{username}:
     get:
       operationId: getTodos
       summary: Get the list of todos
       parameters:
-      - in: path
-        name: username
-        schema:
+        - in: path
+          name: username
+          schema:
             type: string
-        required: true
-        description: The name of the user.
+          required: true
+          description: The name of the user.
       responses:
         "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getTodosResponse'
+                $ref: "#/components/schemas/getTodosResponse"
     post:
       operationId: addTodo
       summary: Add a todo to the list
       parameters:
-      - in: path
-        name: username
-        schema:
+        - in: path
+          name: username
+          schema:
             type: string
-        required: true
-        description: The name of the user.
+          required: true
+          description: The name of the user.
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/addTodoRequest'
+              $ref: "#/components/schemas/addTodoRequest"
       responses:
         "200":
           description: OK
@@ -47,18 +47,18 @@ paths:
       operationId: deleteTodo
       summary: Delete a todo from the list
       parameters:
-      - in: path
-        name: username
-        schema:
+        - in: path
+          name: username
+          schema:
             type: string
-        required: true
-        description: The name of the user.
+          required: true
+          description: The name of the user.
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/deleteTodoRequest'
+              $ref: "#/components/schemas/deleteTodoRequest"
       responses:
         "200":
           description: OK
@@ -76,7 +76,7 @@ components:
     addTodoRequest:
       type: object
       required:
-      - todo
+        - todo
       properties:
         todo:
           type: string
@@ -85,7 +85,7 @@ components:
     deleteTodoRequest:
       type: object
       required:
-      - todo_idx
+        - todo_idx
       properties:
         todo_idx:
           type: integer
